--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 #spring.security.user.name=admin
 #spring.security.user.password=1234
 #spring.security.user.roles=ADMIN
+spring.h2.console.enabled=true
